// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Playout API Global and Part Ad-Libs 1`] = `
Array [
  Object {
    "_id": "randomId9002_part0_0_randomId9006_randomId9002_piece000",
    "isTemporary": false,
    "partInstanceId": "randomId9002_part0_0_randomId9006",
    "piece": Object {
      "_id": "randomId9002_piece000",
      "enable": Object {
        "start": 0,
      },
      "externalId": "MOCK_PIECE_000",
      "invalid": false,
      "lifespan": "part-only",
      "name": "Piece 000",
      "outputLayerId": "pgm",
      "sourceLayerId": "cam0",
      "startPartId": "randomId9002_part0_0",
      "startRundownId": "randomId9002",
      "startSegmentId": "randomId9002_segment0",
      "status": 0,
    },
    "rundownId": "randomId9002",
  },
  Object {
    "_id": "randomId9002_part0_0_randomId9006_randomId9002_piece001",
    "isTemporary": false,
    "partInstanceId": "randomId9002_part0_0_randomId9006",
    "piece": Object {
      "_id": "randomId9002_piece001",
      "enable": Object {
        "start": 0,
      },
      "externalId": "MOCK_PIECE_001",
      "invalid": false,
      "lifespan": "part-only",
      "name": "Piece 001",
      "outputLayerId": "pgm",
      "sourceLayerId": "vt0",
      "startPartId": "randomId9002_part0_0",
      "startRundownId": "randomId9002",
      "startSegmentId": "randomId9002_segment0",
      "status": 0,
    },
    "rundownId": "randomId9002",
  },
  Object {
    "_id": "randomId9002_part0_0_randomId9006_randomId9011",
    "adLibSourceId": "randomId9002_globalAdLib0",
    "dynamicallyInserted": true,
    "infinite": Object {
      "infinitePieceId": "randomId9011",
    },
    "partInstanceId": "randomId9002_part0_0_randomId9006",
    "piece": Object {
      "_id": "randomId9011",
      "enable": Object {
        "start": "now",
      },
      "externalId": "MOCK_GLOBAL_ADLIB_0",
      "lifespan": "rundown-end",
      "name": "Global AdLib 0",
      "outputLayerId": "pgm",
      "sourceLayerId": "cam0",
      "startPartId": "randomId9002_part0_0",
      "status": -1,
      "timings": Object {
        "next": Array [],
        "playOffset": Array [],
        "startedPlayback": Array [],
        "stoppedPlayback": Array [],
        "take": Array [
          1000,
        ],
        "takeDone": Array [],
        "takeOut": Array [],
      },
    },
    "rundownId": "randomId9002",
  },
]
`;

exports[`Playout API Global and Part Ad-Libs 2`] = `
Array [
  Object {
    "_id": "randomId9002_part0_0_randomId9006_randomId9002_piece000",
    "isTemporary": false,
    "partInstanceId": "randomId9002_part0_0_randomId9006",
    "piece": Object {
      "_id": "randomId9002_piece000",
      "enable": Object {
        "start": 0,
      },
      "externalId": "MOCK_PIECE_000",
      "invalid": false,
      "lifespan": "part-only",
      "name": "Piece 000",
      "outputLayerId": "pgm",
      "sourceLayerId": "cam0",
      "startPartId": "randomId9002_part0_0",
      "startRundownId": "randomId9002",
      "startSegmentId": "randomId9002_segment0",
      "status": 0,
    },
    "rundownId": "randomId9002",
  },
  Object {
    "_id": "randomId9002_part0_0_randomId9006_randomId9002_piece001",
    "isTemporary": false,
    "partInstanceId": "randomId9002_part0_0_randomId9006",
    "piece": Object {
      "_id": "randomId9002_piece001",
      "enable": Object {
        "start": 0,
      },
      "externalId": "MOCK_PIECE_001",
      "invalid": false,
      "lifespan": "part-only",
      "name": "Piece 001",
      "outputLayerId": "pgm",
      "sourceLayerId": "vt0",
      "startPartId": "randomId9002_part0_0",
      "startRundownId": "randomId9002",
      "startSegmentId": "randomId9002_segment0",
      "status": 0,
    },
    "rundownId": "randomId9002",
  },
  Object {
    "_id": "randomId9002_part0_0_randomId9006_randomId9011",
    "adLibSourceId": "randomId9002_globalAdLib0",
    "dynamicallyInserted": true,
    "infinite": Object {
      "infinitePieceId": "randomId9011",
    },
    "partInstanceId": "randomId9002_part0_0_randomId9006",
    "piece": Object {
      "_id": "randomId9011",
      "enable": Object {
        "start": "now",
      },
      "externalId": "MOCK_GLOBAL_ADLIB_0",
      "lifespan": "rundown-end",
      "name": "Global AdLib 0",
      "outputLayerId": "pgm",
      "sourceLayerId": "cam0",
      "startPartId": "randomId9002_part0_0",
      "status": -1,
      "timings": Object {
        "next": Array [],
        "playOffset": Array [],
        "startedPlayback": Array [],
        "stoppedPlayback": Array [],
        "take": Array [
          1000,
        ],
        "takeDone": Array [],
        "takeOut": Array [],
      },
    },
    "rundownId": "randomId9002",
  },
  Object {
    "_id": "randomId9002_part0_0_randomId9006_randomId9013",
    "adLibSourceId": "randomId9002_adLib000",
    "dynamicallyInserted": true,
    "partInstanceId": "randomId9002_part0_0_randomId9006",
    "piece": Object {
      "_id": "randomId9013",
      "enable": Object {
        "duration": 1000,
        "start": "now",
      },
      "externalId": "MOCK_ADLIB_000",
      "lifespan": "part-only",
      "name": "AdLib 0",
      "outputLayerId": "pgm",
      "sourceLayerId": "vt0",
      "startPartId": "randomId9002_part0_0",
      "status": -1,
      "timings": Object {
        "next": Array [],
        "playOffset": Array [],
        "startedPlayback": Array [],
        "stoppedPlayback": Array [],
        "take": Array [
          3000,
        ],
        "takeDone": Array [],
        "takeOut": Array [],
      },
    },
    "rundownId": "randomId9002",
  },
]
`;
